--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 html, body {
+    background-color: #F3F3F3;
     width: 100%;
     height:100%;
 }
 
+
 #title{
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-family: Arial, sans-serif;
+    /* font-family: Tahoma, sans-serif; */
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-size: 25px;
 }
 #frm1{
     width: 500px;
@@ -20,7 +24,7 @@ html, body {
     position:relative;
 }
 #checkInfo{
-    color: red;
+    color: black;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 15px;
