--- a/style.css
+++ b/style.css
@@ -27,14 +27,17 @@ html, body {
     font-weight: bold;
     font-size: 15px;
 }
-#bottom{
+
+.footer{
+    position: relative;     
+    text-align: center;    
+    bottom: 0px; 
+    width: 100%;
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    /* font-weight: bold; */
-    font-size: 9px; 
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    font-family: Arial, sans-serif;
+    font-size: 10px;
+    font-weight: bold;
+
 } 
 p{
     color: black;
