--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ html, body {
     font-weight: bold;
     font-size: 15px;
 }
+#dInfo{
+    color:black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+}
 
 .footer{
     position: relative;     
@@ -38,6 +43,16 @@ html, body {
     font-size: 10px;
     font-weight: bold;
 
+}
+.disclaimer{
+    position: relative;     
+    text-align: center;    
+    bottom: 0px; 
+    width: 100%;
+    color: black;
+    font-family: Arial, sans-serif;
+    font-size: 10px;
+    font-weight: bold;
 } 
 p{
     color: black;
