--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ html, body {
 .footer{
     position: relative;     
     text-align: center;    
-    bottom: 0px; 
+    left: 0;
+    bottom: 0;
     width: 100%;
     color: black;
     font-family: Arial, sans-serif;
@@ -44,16 +45,7 @@ html, body {
     font-weight: bold;
 
 }
-.disclaimer{
-    position: relative;     
-    text-align: center;    
-    bottom: 0px; 
-    width: 100%;
-    color: black;
-    font-family: Arial, sans-serif;
-    font-size: 10px;
-    font-weight: bold;
-} 
+
 p{
     color: black;
     font-family: Arial, Helvetica, sans-serif;
